--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>The Medium Slide</title>
-  <style>
-    body {
-      font-family: Arial;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-      background: #f4f4f4;
-    }
-    h1 {
-      color: #222;
-    }
-    a {
-      text-decoration: none;
-      color: blue;
-    }
-  </style>
-</head>
-<body>
+// Misc.
+	$misc: (
+		z-index-base:				10000
+	);
 
-<h1>The Medium Slide</h1>
-<p>Welcome to my blog.</p>
+// Duration.
+	$duration: (
+		transition:					0.2s,
+		bg:							2.5s,
+		intro:						0.75s,
+		article:					0.325s
+	);
 
-<h2>Posts</h2>
-<ul>
-  <li><a href="post1.html">My First Post</a></li>
-</ul>
+// Size.
+	$size: (
+		border-radius:				4px,
+		border-width:				1px,
+		element-height:				2.75rem,
+		element-margin:				2rem
+	);
 
-</body>
-</html>
+// Font.
+	$font: (
+		family:						('Source Sans Pro', sans-serif),
+		family-fixed:				('Courier New', monospace),
+		weight:						300,
+		weight-bold:				600,
+		letter-spacing:				0.2rem,
+		letter-spacing-heading:		0.5rem
+	);
+
+// Palette.
+	$palette: (
+		bg:							#1b1f22,
+		bg-alt:						#000000,
+		bg-overlay:					rgba(19,21,25,0.5),
+		fg:							#ffffff,
+		fg-bold:					#ffffff,
+		fg-light:					rgba(255,255,255,0.5),
+		border:						#ffffff,
+		border-bg:					rgba(255,255,255,0.075),
+		border-bg-alt:				rgba(255,255,255,0.175)
+	);
